Update Open Graph URL and improve accessibility

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="The Inkwell — Poetry and Prose by Beau Holliday">
     <meta property="og:description" content="Essays in Romance & Reverie">
     <meta property="og:image" content="/assets/media/beauholliday.jpg">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://www.beauholliday.com">
     <meta property="og:type" content="website">
     
     <meta name="twitter:card" content="summary_large_image">
@@ -23,20 +23,28 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!-- JavaScript Disabled Fallback -->
+    <noscript>
+        <div style="padding: 2rem; text-align: center; background: #fff5f0; border-bottom: 2px solid #c9685a;">
+            <p style="color: #c9685a; font-family: 'Courier Prime', monospace; font-size: 1rem;">
+                This site requires JavaScript to function. Please enable JavaScript in your browser settings.
+            </p>
+        </div>
+    </noscript>
+
     <!-- Side Navigation -->
     <aside id="side-nav" class="side-nav">
         <div class="side-nav-header">
             <h2>The Inkwell</h2>
-            <button id="close-nav" class="close-nav">✕</button>
+            <button id="close-nav" class="close-nav" aria-label="Close navigation menu">✕</button>
         </div>
         
         <nav class="side-nav-menu">
             <div class="nav-item">
                 <button class="nav-link" data-page="home">Home</button>
             </div>
-
             <div class="nav-section">
-                <button class="nav-section-btn" data-section="read">
+                <button class="nav-section-btn" data-section="read" role="menuitem">
                     <span>Read</span>
                     <span class="arrow">›</span>
                 </button>
@@ -47,9 +55,8 @@
                     <button class="nav-link" data-page="stories">Stories</button>
                 </div>
             </div>
-
             <div class="nav-section">
-                <button class="nav-section-btn" data-section="write">
+                <button class="nav-section-btn" data-section="write" role="menuitem">
                     <span>Write</span>
                     <span class="arrow">›</span>
                 </button>
@@ -57,9 +64,8 @@
                     <button class="nav-link" data-page="prompts">Prompts</button>
                 </div>
             </div>
-
             <div class="nav-section">
-                <button class="nav-section-btn" data-section="keep">
+                <button class="nav-section-btn" data-section="keep" role="menuitem">
                     <span>Keep</span>
                     <span class="arrow">›</span>
                 </button>
@@ -75,7 +81,7 @@
         <!-- Static Header -->
         <header id="header">
             <div class="header-content">
-                <button id="menu-toggle" class="menu-toggle">☰</button>
+                <button id="menu-toggle" class="menu-toggle" aria-label="Toggle navigation menu">☰</button>
                 <h1>The Inkwell</h1>
                 <div class="header-spacer"></div>
             </div>
